# s3-ops-connector

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test.yml
s3_ops_connector/: __init__.py
s3_ops_connector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
s3_ops_connector/core/: connector.py
s3_ops_connector/services/: dq.py  file_detection.py  file_movement.py  file_read.py  file_validation.py
tests/: test_connector.py
