[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s3-ops-connector"
version = "0.1.0"
description = "Reusable S3 operations, validation, and data quality connector"
readme = "README.md"
requires-python = ">=3.8"

authors = [{ name="Your Name", email="your@email.com" }]

license = { text = "MIT" }

dependencies = [
    "boto3>=1.26.0",
    "pandas>=1.5.0"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
