[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s3-ops-connector"
version = "0.1.0"
description = "Reusable S3 operations, validation, and data quality connector"
readme = "README.md"
requires-python = ">=3.8"

authors = [{ name = "Dwaipayan Dutta", email = "dwdutta@gmail.com" }]

license = { file = "LICENSE" }

keywords = ["s3", "aws", "boto3", "data-quality", "file-operations"]

dependencies = [
    "boto3>=1.26.0",
    "pandas>=1.5.0",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dwaipayan-dutta/s3-ops-connector"
Repository = "https://github.com/dwaipayan-dutta/s3-ops-connector"
Issues = "https://github.com/dwaipayan-dutta/s3-ops-connector/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "moto[s3]>=4.0",
    "build",
    "twine",
]
